# yet-another-cad-viewer

./: .generatelicensefile.json  .gitignore  .vuerc.js  CONTRIBUTING.md  LICENSE  README.md  build.py  hatch_build.py  index.html  package-lock.json  package.json  playwright.config.ts  pyproject.toml  renovate.json  tsconfig.json  type-check.cjs  vite.config.ts
.github/: dependabot.yml  renovate.json5
.github/workflows/: autoupdate.yml  build.yml  ci.yml  deploy.yml  deploy1.yml  deploy2.yml
assets/: .gitignore  fox.glb.license  licenses.txt  logo.glb  qwantani_afternoon_1k.hdr  qwantani_afternoon_1k.hdr.license
assets/logo_build/: img.jpg.glb  location.glb
e2e/: app.spec.ts  control.ts  yacv_server_launcher.py
example/: .gitignore  README.md  object.py  requirements.txt
frontend/: App.vue  index.ts  shims.d.ts
frontend/misc/: IfNotSmallBuild.vue  Loading.vue  Sidebar.vue  distances.ts  gltf.ts  helpers.ts  lines.ts  network.ts  scene.ts  settings.ts
frontend/models/: Model.vue  Models.vue
frontend/tools/: LicensesDialogContent.vue  OrientationGizmo.vue  PlaygroundDialogContent.vue  PlaygroundStartup.py  Selection.vue  Tools.vue  b64.ts  b66.ts  monaco.ts  pyodide-worker-api.ts  pyodide-worker.ts  selection.ts  upload-file.ts
frontend/viewer/: ModelViewerWrapper.vue  lighting.ts  viewerUtils.ts
src/: App.vue  Loading.vue  ModelViewer.vue  ModelViewerOverlay.vue  ModelViewerWrapper.vue  OrientationGizmo.vue  Sidebar.vue  Tools.vue  app.ts  index.css  index.html  index.ts  orientation.ts  settings.ts  shims.d.ts
src/misc/: Sidebar.vue  distances.ts  gltf.ts  helpers.ts  network.ts  scene.ts  settings.ts
src/models/: Model.vue  Models.vue  Sidebar.vue
src/models/glb/: glbs.ts  merge.ts
src/tools/: LicensesDialogContent.vue  OrientationGizmo.vue  Selection.vue  Tools.vue  settings.ts
src/viewer/: ModelViewerWrapper.vue
yacv_server/: __init__.py  cad.py  events.py  glbs.py  gltf.py  logo.py  main.py  myhttp.py  mylogger.py  plugin.py  pubsub.py  requirements.txt  rwlock.py  server.py  tessellate.py  yacv.py
yacv_server/logo/: logo.py
