[build-system]
requires = ["poetry-core==2.1.3", "taskipy==1.14.1"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "yacv-server"
version = "0.10.7"
description = "Yet Another CAD Viewer (server)"
authors = ["Yeicor <4929005+Yeicor@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
include = [
    { path = 'yacv_server/frontend/**/*', format = 'wheel' },
    { path = 'yacv_server/frontend/**/*', format = 'sdist' },
]

[tool.taskipy.tasks]
build = "task build_frontend && task build_backend"
build_frontend = "rm -rf yacv_server/frontend || true && yarn install && YACV_SMALL_BUILD=true yarn build --outDir yacv_server/frontend"
build_backend = "poetry build --format wheel"

[tool.poetry.dependencies]
python = ">=3.12,<3.13" # Due to vtk transitive dependency of build123d -> cadquery-ocp -> vtk

# CAD
build123d = ">=0.9,<0.10"

# Misc
pygltflib = "^1.16.2"
pillow = ">=10.2,<12.0"
poetry-core = "==2.1.3"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
