[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yacv-server"
version = "0.10.14"
description = "Yet Another CAD Viewer (server)"
authors = [{ name = "Yeicor", email = "4929005+Yeicor@users.noreply.github.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "build123d>=0.10,<0.11",
    "pygltflib>=1.16.2",
    "pillow>=12,<12.3",
]

[tool.hatch.build.targets.wheel]
packages = [ "yacv_server" ]
include = [ "/yacv_server/frontend" ]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [ "/*" ] # Include all backend and frontend files to build complete project from python sdist

